# ai-meal-recommendation

./: .gitignore  CASCADING_ERRORS.md  CLEANUP_FAILED_ENV.md  CREATE_ECR_LOCALLY.md  FIND_SOLUTION_STACK.md  GET_EB_SOLUTION_STACKS.md  INITIALIZE_PULUMI.md  OIDC_SETUP.md  Pulumi.prod.yaml  Pulumi.test.yaml  Pulumi.yaml  README.md  UPDATE_IAM_POLICY.md  WHY_PERMISSIONS_ERRORS.md  WORKFLOW_ARCHITECTURE.md  check-eb-stacks.sh  cleanup-failed-eb-env.sh  find-eb-solution-stack.sh  frontend-iam-policy.json  github-actions-trust-policy.json  setup-oidc-role.sh
.github/workflows/: build-frontend-pr.yml  deploy-frontend-prod.yml  deploy-frontend-test.yml  destroy-frontend-infrastructure.yml
backend/recipe-assistant/: Dockerfile  gunicorn.conf.py  pyproject.toml  requirements.txt
backend/recipe-assistant/recipe_assistant/: server.py  token_service.py
backend/recipe-assistant/recipe_assistant/models/: chat.py  users.py
backend/recipe-assistant/recipe_assistant/models/db/: users.py
backend/recipe-assistant/recipe_assistant/routers/: chat.py  users.py
backend/recipe-assistant/recipe_assistant/tests/: test_mongodb_connection.py  test_token_service.py
backend/recipe-assistant/recipe_assistant/utils/: assistant.py  cache.py  db.py  openai_client.py
backend/recipe-assistant/scripts/: run.sh
data/: 244.xml  393.xml  49.xml  581.xml  651.xml  678.xml  713.xml  887.xml  90.xml  99.xml  diabetic_recipe.csv  final_usda_ingredients.csv  gpt4_1106_recipes.csv  gpt4_1106_recipes.json  mayo_clinic_recipes.json  orginal_recipes.csv  orginal_recipes.json  prompts.txt  prompts_v2.txt  recipes.csv  recipes_similarity.json
data/diabetic_recipe_gpt1106/: 10.xml  11.xml  2.xml  3.xml  4.xml  5.xml  6.xml  7.xml  8.xml  9.xml  gpt4_1106_recipes.csv  gpt4_1106_recipes.json  orginal_recipes.csv  orginal_recipes.json
data/generated_recipe_v2/: 11.xml  12.xml  13.xml  14.xml  15.xml  16.xml  17.xml  18.xml  19.xml  20.xml  gpt4_1106_enrich_ingredients.json  gpt4_1106_enrich_recipes.json  gpt4_1106_ner_recipes.json  gpt4_1106_recipes.json  ingredients.csv  total_calorie_estimation.json
data/generated_recipe_v3/: gpt4_turbo_enrich_ingredients.json  gpt4_turbo_enrich_recipes.json  gpt4_turbo_ner_recipes.json  gpt4_turbo_recipes.json  total_calorie_estimation.json
data/generated_recipe_v3/recipes/: 1.xml  10.xml  11.xml  12.xml  13.xml  14.xml  15.xml  16.xml  17.xml  18.xml  19.xml  2.xml  20.xml  21.xml  22.xml  23.xml  24.xml  25.xml  26.xml  27.xml  28.xml  29.xml  3.xml  30.xml  31.xml  32.xml  33.xml  34.xml  35.xml  36.xml  37.xml  38.xml  39.xml  4.xml  40.xml  41.xml  42.xml  43.xml  44.xml  45.xml  (+50 more)
data/random_diabetic_recipe/: 1.xml  10.xml  2.xml  3.xml  4.xml  5.xml  6.xml  7.xml  8.xml  9.xml  chicken_salad_recipe.json  gpt4_1106_recipes.json
data/results/: allrecepies_ingredient_count.csv  mayoclinic_ingredient_count.csv  recipes_similarity.json  total_calorie_estimation_v1.json  unique_ingredients.csv
data/scrapped_recipes/: 1.xml  10.xml  11.xml  12.xml  13.xml  14.xml  15.xml  16.xml  17.xml  18.xml  19.xml  2.xml  20.xml  3.xml  4.xml  5.xml  6.xml  7.xml  8.xml  9.xml  bell_pepper.json  chicken_salad.json  chickpea.json  frittata_recipes.json  gpt4_1106_recipes.json  gpt4_1106_recipes_v2.json  pancake.json  scrapped_recipes.csv  smoothie.json  tofu.json
frontend/: Dockerfile  Dockerrun.aws.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/recipeassistant/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  theme.tsx
frontend/src/helpers/: api-communicator.ts
infrastructure/: __init__.py  __main__.py  config.py  pyproject.toml
infrastructure/components/: __init__.py  base.py  ecr.py  elasticbeanstalk.py
infrastructure/config_types/: __init__.py  ecr_config.py  elasticbeanstalk_config.py
notebooks/: api_test.ipynb  assistant_api_overview_python.ipynb  calorie_estimation.ipynb  compare_ingredients_usda.ipynb  compare_recipes_embedding.ipynb  dataset_exploration.ipynb  extract_ingredients.ipynb  extract_recipe.ipynb  gpt4_1106_recipe_diabetic.ipynb  gpt4_1106_recipe_generation.ipynb  gpt4_recipe_generation_v2.ipynb  gpt4_turbo_recipe_aggregation.ipynb  gpt4_turbo_recipe_generation.ipynb  gpt_authenticity_recipe.ipynb  gpt_authenticity_recipe_scrapped_data.ipynb  ingredients_ner_v2.ipynb  ner_openai.ipynb  results_graph.ipynb  usda_food_api.ipynb  web_scraping.ipynb
utils/: models.py
wireframes/: recipe_assistant.fig
(+20 files in other folders)
